changes after review v2